--- a/static/package.json
+++ b/static/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "bootstrap-flat": "^3.3.4",
+    "classnames": "^2.3.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
